--- a/audchf.html
+++ b/audchf.html
@@ -13,7 +13,8 @@
 	<body>
 		<h1>Chart.js - Financial chart</h1>
 		<p>See the <a href="https://github.com/chartjs/chartjs-chart-financial/tree/master/docs">source for this example</a>, <a href="https://github.com/chartjs/chartjs-chart-financial">README</a>, and <a href="https://www.chartjs.org/docs/">Chart.js docs</a> for more details.</p>
-		<h2>TwelveData AUDCHF 14/05 de 7am a 8am UTC</h2>
+		<!-- <h2>TwelveData AUDCHF 14/05 de 7am a 8am UTC</h2> -->
+		<h2>FMP AUDCHF 14/05 de 7am a 8am UTC</h2>
 		<!-- <h2>TraderMade AUDCHF 14/05 de 7am 8am GMT</h2> -->
 		<div style="width:1000px;height: 500px;">
 			<canvas id="chart"></canvas>
